fix the page-title h1 elements font size issue on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -16,12 +16,23 @@ body {
 /* === Header ===  */
 
 
+
+#mobile-menu {
+  position: absolute;
+  background: #212121;
+  box-shadow: 1px 1px 4px black;
+  top: 0;
+}
+
+
 .title-bar {
 
   padding: .6em 1em;
   width: 100%;
- 
-  z-index: 1;
+  position: absolute;
+  background: #212121;
+  box-shadow: 1px 1px 4px black;
+  top: 0;
   transition: top 0.4s;
   background: #212121;
 }
@@ -168,14 +179,16 @@ body {
 
 #page-title {
   color: white;
+  z-index: -1;
   width: 100%;
   height: 20em;
-  padding: 6em 2em 2em 2em;
+  padding: 8em 2em 2em 2em;
+  margin-bottom: 4em;
 }
 #page-title h1 {
   font-family: "Ubuntu", sans-serif;
   font-weight: 700;
-  font-size: 70pt;
+  font-size: 50pt;
 }
 
 .blue {
@@ -351,6 +364,11 @@ footer p {
 
 /* Medium and down */
 @media screen and (max-width: 39.9375em) {
+  
+  #page-title {
+    margin-bottom: 0;
+  }
+  
   #mobile-menu .cell {
     margin-bottom: .5em;
   }
@@ -365,6 +383,7 @@ footer p {
 }
 /* Medium only */
 @media screen and (min-width: 40em) and (max-width: 63.9375em) {
+ 
 .no-js .top-bar {
     display: block;
   }
@@ -384,6 +403,9 @@ footer p {
 }
 /* Large and up */
 @media screen and (min-width: 64em) {
+  #page-title h1 {
+    font-size: 70pt;
+  }
  .top-bar {
     top: 0;
   }
